2006-11-01  Per Bothner  <per@bothner.com>

	* SingletonType.java: New class, extends ObjectType.
	* Makefile.am: Update accordingly.
	* OccurrenceType.java (getInstance): Add a special case.
	(compare): Add slightly more intelligence.
	(itemCountIsOne): New static method, expanded on and replacing
	SeriesTarget.isSingletonType.
	(itemCountRange, itemCountCode, itemCountIsZeroOrOne,
	itemPrimeType): New static methods.

2006-10-29  Per Bothner  <per@bothner.com>

	* TypeSwitch.java (apply): Fix so it actually works.

2006-10-25  Per Bothner  <per@bothner.com>

	* OccurrenceType.java (emptySequenceType): New static final.

2006-09-28  Per Bothner  <per@bothner.com>

	* OccurrenceType.java (getBase, minOccurs, maxOccurs): New accessors.
	(coerceFromObject): Handle singleton, if apprpriate.

2006-09-11  Per Bothner  <per@bothner.com>

	* FieldLocation.java: Remove unused local variable.
	* Invoke.java: Likewise.
	* StaticFieldLocation.java: Remove unused import.

2006-08-08  Per Bothner  <per@bothner.com>

	* FieldLocation.java (make): New factory method for immediate mode.
	* StaticFieldLocation.java (make): Likewise.

2006-07-12  Per Bothner  <per@bothner.com>

	* SlotGet.java (inline): If class unknown, return.
	* Invoke.java (checkKnownClass): Fix javadoc comment.

2006-06-27  Per Bothner  <per@bothner.com>

	* OccurrenceType.java (getConstructor): New method.
	* Invoke.java (typeFrom): Allow any ObjectType.
	(applyN): If dtype is a TypeValue, check for non-null getConstructor.
	(inline): Likewise.  Merge in private method into public method.

2006-06-16  Per Bothner  <per@bothner.com>

	* Invoke.java (typeFrom): Handle ClassNamespace.

2006-06-12  Per Bothner  <per@bothner.com>

	* Invoke.java (checkKnownClass): New method.
	(inlineClassName): Use it.
	* SlotGet.java (inline): Likewise.

2006-05-30  Per Bothner  <per@bothner.com>

	* SlotGet.java (inline): Fix bug in handling of "class" pseudo-field.

2006-05-09  Per Bothner  <per@bothner.com>
